# VELOCIraptor-STF

./: .clang-format  .gitignore  .gitmodules  .tags  .travis.yml  CMakeLists.txt  COPYRIGHT  Dockerfile  Makefile  Makefile.config.template  README.md  license  readme.md  remove_DSstore.sh
.travis/: before_install.sh  install.sh  test.sh
cmake/: VRCMakeUtils.cmake  VRCompilationMessages.cmake
doc/: Makefile  conf.py  dev.rst  getting.rst  index.rst  output.rst  requirements.txt  usage.rst
examples/: SampleHaloMassFunction.ipynb  WalkUnifiedTree.py  baryonsample.cfg  catalocomparison_VRinputonly.py  catalogcomparisontolerancecheck.py  profile_build.sh  qsub.runvelociraptor.sh  sample.cfg  sample2_swifthydro_3dfof_subhalo_extra_properties.cfg  sample_dmcosmological_3dfof.cfg  sample_dmcosmological_3dfof_subhalo.cfg  sample_dmcosmological_6dfof_subhalo.cfg  sample_dmcosmological_6dfof_subhalo_tidal_debris.cfg  sample_dmcosmological_run.cfg  sample_eaglehydro_3dfof_subhalo.cfg  sample_eaglehydro_6dfof_subhalo.cfg  sample_galaxycatalog_run.cfg  sample_gasbubblesearch.cfg  sample_hydrocosmological_run.cfg  sample_swiftdm_3dfof_subhalo.cfg  sample_swifthydro_3dfof_subhalo.cfg  sample_swifthydro_3dfof_subhalo_extra_properties.cfg  sample_zoomdmcosmological_run.cfg  (+5 more)
src/: CMakeLists.txt  allvars.cxx  allvars.h  bgfield.cxx  buildandsortarrays.cxx  compilation_info.cxx.in  compilation_info.h  endianutils.cxx  endianutils.h  exceptions.cxx  exceptions.h  fofalgo.cxx  fofalgo.h  gadgetio.cxx  gadgetitems.h  generate.cxx  git_revision.cxx.in  git_revision.h  h5_output_file.cxx  h5_utils.cxx  h5_utils.h  haloproperties.cxx  hdfio.cxx  hdfitems.h  hierarchy.cxx  io.cxx  io.h  ioutils.h  js_perform.h  localbgcomp.cxx  localfield.cxx  logging.cxx  logging.h  main.cxx  mpigadgetio.cxx  mpihdfio.cxx  mpinchiladaio.cxx  mpiramsesio.cxx  mpiroutines.cxx  mpitipsyio.cxx  (+22 more)
src/tests/: CMakeLists.txt  test_h5_output_file.cxx
stf/: CMakeLists.txt  Makefile  Makefile.config  Makefile.config.SWIFT-template  Makefile.config.template  README  VERSION
stf/NBodylib/: CMakeLists.txt  Makefile
stf/NBodylib/doc/: Doxyfile  Doxyfile~  conf.py  index.rst  libNBody.tag
stf/NBodylib/src/: Makefile
stf/NBodylib/src/Analysis/: Analysis.h  Analysis.h~  CMakeLists.txt  Density.cxx  Density.cxx~  Density.h~  Density.lo  Energy.h  Energy.h~  Energy.lo  Makefile  Morphology.cxx  Morphology.cxx~  Morphology.h  Morphology.h~  Morphology.lo  Power.cxx  Power.cxx~  Power.h  Power.h~  Power.lo  libAnalysis.la
stf/NBodylib/src/Cosmology/: CMakeLists.txt  Cosmology.cxx  Cosmology.cxx~  Cosmology.h  Cosmology.h~  Makefile
stf/NBodylib/src/InitCond/: CMakeLists.txt  InitCond.cxx  InitCond.cxx~  InitCond.h  InitCond.h~  Makefile
stf/NBodylib/src/KDTree/: CMakeLists.txt  DistFunc.h  DistFunc.h~  FOFFunc.h~  KDCalcSmoothQuantities.cxx  KDCalcSmoothQuantities.cxx~  KDFOF.cxx  KDFOF.cxx~  KDFindNearest.cxx  KDFindNearest.cxx~  KDLeafNode.cxx  KDLeafNode.cxx~  KDNode.h  KDNode.h~  KDSplitNode.cxx  KDSplitNode.cxx~  KDTree.cxx  KDTree.cxx~  KDTree.h  KDTree.h~  Makefile  PriorityQueue.h  SmoothingKernels.h
stf/NBodylib/src/Math/: CMakeLists.txt  Coordinate.cxx  Coordinate.cxx~  Coordinate.h  Coordinate.h~  Coordinate2D.cxx  Coordinate2D.cxx~  Coordinate2D.h  Coordinate2D.h~  ExtremaRootFinding.h  ExtremaRootFinding.h~  Fitting.cxx  Fitting.cxx~  Fitting.h  Fitting.h~  Function.h  Function.h~  GMatrix.cxx  GMatrix.cxx~  GMatrix.h  GMatrix.h~  Integrate.cxx  Integrate.cxx~  Integrate.h  Integrate.h~  Interpolate.cxx  Interpolate.cxx~  Interpolate.h  Interpolate.h~  Makefile  Matrix.cxx  Matrix.cxx~  Matrix.h  Matrix.h~  Matrix2D.cxx  Matrix2D.cxx~  Matrix2D.h  Matrix2D.h~  NBodyMath.h  NBodyMath.h~  (+14 more)
stf/NBodylib/src/NBody/: CMakeLists.txt  Makefile  NBody.cxx~  NBody.h  NBody.h~  Particle.cxx  Particle.cxx~  Particle.h  Particle.h~  SwiftParticle.h  System.cxx  System.cxx~  System.h  System.h~
stf/analysis/: Makefile
stf/analysis/baryons/: Makefile  allvars.cxx  allvars.h  allvars.h~  baryoniccontent  baryoniccontent.h  baryoniccontent.h~  binding.cxx  binding.cxx~  endianutils.cxx  endianutils.h  io.cxx  io.cxx~  main.cxx  main.cxx~  particleio.cxx  particleio.cxx~  properties.cxx  proto.h  proto.h~  stfio.cxx  stfio.cxx~  ui.cxx  ui.cxx~
stf/analysis/halotree/: Makefile  TreeFrog.h  allvars.cxx  allvars.cxx~  allvars.h  allvars.h~  crosscheck.cxx  crosscheck.cxx~  halomergertree  halomergertree.h  halomergertree.h~  io.cxx  io.cxx~  main.cxx  main.cxx~  mpiroutines.cxx  mpivar.h  otherio.cxx  proto.h  proto.h~  stfio.cxx  stfio.cxx~  ui.cxx  ui.cxx~  utilities.cxx
stf/analysis/orbweaver/: orbweaver.py
stf/analysis/treefrog/: CMakeLists.txt  Makefile  TreeFrog.h  allvars.cxx  allvars.h  crosscheck.cxx  idroutines.cxx  io.cxx  main.cxx  mpiroutines.cxx  mpivar.h  otherio.cxx  proto.h  stfio.cxx  treefrog  ui.cxx  utilities.cxx
stf/analysis/treefrog/doc/: Doxyfile  TreeFrog.tag
stf/doc/: Doxyfile  Doxyfile.bak  Doxyfile~  Makefile  VELOCIraptor.tag  conf.py  getting.rst  index.rst  output.rst  usage.rst
stf/examples/: SampleHaloMassFunction.ipynb  baryonsample.cfg~  catalogcomparisontolerancecheck.py  qsub.runvelociraptor.sh  sample.cfg  sample.cfg~  sample_dmcosmological_run.cfg  sample_galaxycatalog_run.cfg  sample_hydrocosmological_run.cfg  sample_zoomdmcosmological_run.cfg  samplestfrun.sh  samplestfrun.sh~
stf/src/: CMakeLists.txt  Makefile  allvars.cxx~  allvars.h  allvars.h~  bgfield.cxx  bgfield.cxx~  buildandsortarrays.cxx  buildandsortarrays.cxx~  endianutils.cxx  endianutils.cxx~  endianutils.h  endianutils.h~  fitting.h  fitting.h~  fofalgo.cxx  fofalgo.h  fofalgo.h~  gadgetio.cxx  gadgetio.cxx~  gadgetitems.h  gadgetitems.h~  haloproperties.cxx  haloproperties.cxx~  hdfio.cxx  hdfio.cxx~  hdfitems.h  hdfitems.h~  io.cxx  io.cxx~  localbgcomp.cxx  localbgcomp.cxx~  localfield.cxx  localfield.cxx~  main.cxx  main.cxx~  mpigadgetio.cxx  mpihdfio.cxx  mpinchiladaio.cxx  mpiramsesio.cxx  (+33 more)
stf/tools/: velociraptor_python_tools.py  velociraptor_python_tools.py.bak  velociraptor_python_tools.py.orig
(+11 files in other folders)
